# tausestack-sdk

./: .cursorrules  .gitignore  ARCHITECTURE.md  ARQUITECTURA_HIBRIDA.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGEO_100_PORCIENTO_COMPLETADO.md  DEPLOYMENT_AWS_GUIDE.md  DEPLOY_PRODUCCION_EXITOSO.md  DESPLIEGUE_AWS_COMPLETO.md  Dockerfile  ESTADO_FINAL_OPTIMIZADO.md  ESTADO_FINAL_SERVICIOS.md  ESTADO_SERVICIOS_CONFIGURADOS_FINAL.md  ESTRUCTURA_RECOMENDADA.md  LIMPIEZA_COMPLETADA.md  MIGRACION_v1.0.0_COMPLETADA.md  MIGRACION_v1.0.0_REAL_COMPLETADA.md  PLAN_PARALELO_JULIO_2025.md  PROGRESO_DEBUGGEO_ACTUALIZADO.md  PROGRESO_DEBUGGEO_COMPLETADO.md  PROGRESO_DEBUGGEO_FINAL.md  PROGRESO_DEBUGGEO_FINAL_COMPLETADO.md  PROGRESO_DEBUGGEO_SERVICIOS.md  PROJECT_STRUCTURE.md  README_LOCAL_SETUP.md  ROADMAP.md  ROADMAP_VERSIONADO.md  SERVICIOS_REALES_CONFIGURADOS.md  SUPABASE_AUTH_MIGRATION.md  TAUSESTACK_AGENT_ENGINE_PLAN.md  TODO.md  current-task-def.json  docker-compose.yml  fix_api_subdomain.py  fix_tausepro_certificates.py  fix_tausepro_dns.json  launch_builder.py  manual_certificate_setup.md  package-lock.json  (+7 more)
.archived/: README.md  cleanup_for_aws.py  deploy-complete.sh  deploy-mvp.sh  real_cleanup_for_aws.py  start-production-simple.sh
.archived/20250804_153806_cleanup/: configure-tausepro-dns.sh  fix_domain_config.py  new-task-def.json  quick_test.py  test_admin_integration.py  test_supabase_auth.py  test_tausepro_domains.py
.archived/20250804_153806_cleanup/frontend_roto_backup/: .gitignore  .prettierrc  README.md  README_MEJORAS_v0.6.0.md  debug-supabase.js  next.config.js  next.config.ts  package.json  test-supabase-complete.js  tsconfig.json
.archived/20250804_153806_cleanup/recovered-code/: README.md
.cursor/rules/: phyrul.mdc  tausestackframework.mdc
.taskmaster/: state.json
core/config/: base.py  development.py  production.py  test.py
core/utils/: auth.py  federation_client.py  plugins_base.py  plugins_registry.py
docker/: Dockerfile.app  Dockerfile.landing
docs/: domain-configuration.md
docs/about/: license.md  overview.md
docs/examples/: auth_users_integration.md
docs/guides/: quickstart.md
examples/: agent_foundation_demo.py  ai_integration_demo.py  api_gateway_demo.py  billing_service_demo.py  crm_adapter_plugin.py  crm_plugin_demo.py  federation_demo.py  frontend_demo.py  hybrid_strategy_demo.py  integrated_services_demo.py  isolation_demo.py  isolation_demo_simple.py  isolation_standalone_demo.py  mcp_agent_demo.py  mcp_ai_integration_demo.py  mcp_multiagent_workflow_demo.py  mcp_multitenant_demo.py  mcp_multitenant_standalone_demo.py  multi_tenant_compatibility_demo.py  multitenant_services_demo.py  tausepro_integration_demo.py  template_engine_demo.py  test_agent_api.py
scripts/: cleanup-project.sh  deploy-production.sh  deploy-tausepro.sh  start-production.sh  status.sh
scripts/dev/: start-dev.sh  start_agent_team_api.py  start_ai_services.py  start_builder_api.py  start_local.sh  start_services.py  start_template_engine.py  stop_local.sh  verify_setup.py
scripts/infrastructure/: setup-domain.sh  setup-supabase-production.sh
tausestack/cli/commands/: framework_cmd.py  run.py
tausestack/infrastructure/aws/: environment.aws.template  tause-stack-production.yml
tausestack/sdk/: README.md
tausestack/sdk/ai/: __init__.py
tausestack/sdk/cache/: backends.py  base.py
tausestack/sdk/isolation/: __init__.py
tausestack/sdk/notify/: backends.py  base.py  exceptions.py  main.py
tausestack/sdk/storage/: backends.py  exceptions.py  main.py  serializers.py
tausestack/services/: admin_api.py  agent_api.py  agent_team_api.py  ai_simple.py  api_gateway.py  builder_api.py  mcp_server_api.py
tausestack/services/builder/: README.md  (+1 more)
templates/registry/: advanced-dashboard.json
tests/: _conftest.py  _disabled_conftest.py  conftest.py  test_federation.py  test_federation_security.py  test_mcp_server_api.py  test_plugins_integration.py  test_serializers.py  test_storage_key_validation.py
tests/cli/: test_cli_deploy.py  test_cli_init.py  test_cli_run.py
tests/framework/: test_routing.py
tests/integration/: test_multi_agent_orchestration.py  test_user_registration_and_login.py
(+186 files in other folders)
